--- a/te-amo.html
+++ b/te-amo.html
@@ -64,7 +64,7 @@
         text-align: center;
         padding-top: 30px;
         margin-bottom: 100px;
-        overflow: hidden;
+        overflow-x: hidden;
       }
 
       .container {
