--- a/te-amo.html
+++ b/te-amo.html
@@ -63,8 +63,6 @@
         font-family: Arial, sans-serif;
         text-align: center;
         padding-top: 30px;
-        margin-bottom: 100px;
-        overflow-x: hidden;
       }
 
       .container {
@@ -73,6 +71,8 @@
         flex-direction: column;
         align-items: center; 
         justify-content: center; 
+        padding-bottom: 100px;
+        /* background-color: aqua; */
       }
 
       iframe {
